# eel-cli

./: .gitignore  Makefile  README.md  go.mod
cmd/eel-cli/: main.go
internal/commands/: build.go  create.go  dev.go  install.go  py.go  web.go
internal/config/: config.go
internal/template/: template.go
internal/template/files/: README.md  main.py  pyproject.toml
pkg/utils/: exec.go  logger.go
scripts/: install.ps1
