[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eel-cli"
version = "0.0.0"
description = "Eel-based desktop app scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "JuanBrotenelle" }]
license = { text = "MIT" }
dependencies = [
  "Eel>=0.16.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
